Closed Bug 684135 Opened 14 years ago Closed 14 years ago

Shutdown crash reporting exception [@ nsTHashtable<nsBaseHashtableET<nsUint64HashKey, nsGlobalWindow*> >::GetEntry ]

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla9

People

(Reporter: mrbkap, Assigned: mrbkap)

References

Details

(Keywords: crash)

Crash Data

Attachments

(2 files)

Attached file stack
While shutting down, I crashed today trying to report an exception (see the attached stack). What appears to have happened is that during shutdown some sort of "race" in an extension I have caused an exception to be thrown from an nsITimer callback. Reporting the exception in XPConnect tries to get the inner window from the inner window ID. However, we're already far enough into shutdown that the call to nsGlobalWindow::GetInnerWindowWithId crashes because we've already nulled out nsGlobalWindow::sWindowsById.
Attached patch patch v1Splinter Review
I can see a few ways of fixing this: add the null check here or in nsScriptError or check that we're in shutdown somehow in nsScriptError. I don't have a strong opinion for any of the options though. I haven't been able to reproduce the crash since the first time, sadly.
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #557745 - Flags: review?(bzbarsky)
Comment on attachment 557745 [details] [diff] [review] patch v1 r=me
Attachment #557745 - Flags: review?(bzbarsky) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla9
Severity: normal → critical
Crash Signature: [@ nsTHashtable<nsBaseHashtableET<nsUint64HashKey, nsGlobalWindow*> >::GetEntry ]
Keywords: crash
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: