Bug 684135 - Protect against calling this function during shutdown. r=bzbarsky